# youtube

./: README.md  get_js_deps.sh  pyproject.toml  requirements.txt
src/y2zim/: __main__.py  constants.py  entrypoint.py  scraper.py  utils.py  youtube.py
